--- a/assets/main.css
+++ b/assets/main.css
@@ -32,7 +32,7 @@ h1{
     margin-right: 13%;
 }
 .imgFooterheader{
-    background-image: url('/assets/img/sky.jpg');
+    background-image: url('../assets/img/sky.jpg');
     height: 450px;
     width: 100%;
 }
